implement Java 21 virtual threads for the server